# adsensefixer9000

./: .env.example  .gitignore  README.md  gpvb.sqlite  pyproject.toml
.github/workflows/: ci.yml
src/gpvb/: __init__.py  audit.py  cli.py  models.py  storage.py
src/gpvb/crawl/: canonicalize.py  frontier.py  sitemap.py
src/gpvb/detect/: ads_txt.py  detectors.py  text.py
src/gpvb/detect/program_policy/: __init__.py  autogenerated_content.py  context.py  deceptive_representation.py  invalid_traffic_signals.py  malware_risk.py  manipulative_ad_placement.py  risk.py  traffic_source_abuse.py  ugc_risk.py
src/gpvb/render/: browser.py
src/gpvb/report/: writer.py
tests/: test_ads_txt.py  test_canonicalize.py  test_fixtures.py  test_program_policy_detectors.py  test_simhash.py  test_sitemap.py
tests/fixtures/: ad_page.html  deceptive_affiliation.html  fake_navigation_ads.html  forced_download.html  incentivized_click.html
tests/fixtures/autogenerated_cluster/: page1.html  page2.html
