[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-policy-violations-bot"
version = "0.1.0"
description = "CLI tool to audit Google AdSense/Publisher Policy violations heuristically."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "typer>=0.12.0",
  "httpx>=0.26.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pydantic>=2.6.0",
  "playwright>=1.41.0",
  "langdetect>=1.0.9",
  "readability-lxml>=0.8.1",
]

[project.scripts]
gpvb = "gpvb.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.8"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
